@@ -1,14 +1,12 @@
 package io.contexa.contexaiam.security.xacml.pip.resolver;
 
-import io.contexa.contexaiam.security.core.CustomUserDetails;
-import io.contexa.contexacommon.entity.Group;
-import io.contexa.contexacommon.entity.UserGroup;
-import io.contexa.contexacommon.entity.Users;
+import io.contexa.contexacommon.entity.*;
 import io.contexa.contexacommon.repository.GroupRepository;
+import io.contexa.contexacommon.security.authority.RoleAuthority;
+import io.contexa.contexacommon.security.authority.PermissionAuthority;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 @RequiredArgsConstructor
 public class GroupAuthorityResolver implements SubjectAuthorityResolver {
@@ -23,8 +21,27 @@ public class GroupAuthorityResolver implements SubjectAuthorityResolver {
     public Set<GrantedAuthority> resolveAuthorities(Long subjectId) {
         Group group = groupRepository.findByIdWithRoles(subjectId)
                 .orElseThrow(() -> new IllegalArgumentException("Group not found with ID: " + subjectId));
-        // 가상의 사용자를 만들어 그룹 권한만 계산
-        Users virtualUser = Users.builder().userGroups(Set.of(new UserGroup(null, group))).build();
-        return new HashSet<>(new CustomUserDetails(virtualUser).getAuthorities());
+
+        Set<GrantedAuthority> authorities = new HashSet<>();
+
+        Optional.ofNullable(group.getGroupRoles())
+                .orElse(Collections.emptySet())
+                .stream()
+                .map(GroupRole::getRole)
+                .filter(Objects::nonNull)
+                .forEach(role -> {
+                    authorities.add(new RoleAuthority(role));
+
+                    Optional.ofNullable(role.getRolePermissions())
+                            .orElse(Collections.emptySet())
+                            .stream()
+                            .map(RolePermission::getPermission)
+                            .filter(Objects::nonNull)
+                            .forEach(permission -> {
+                                authorities.add(new PermissionAuthority(permission));
+                            });
+                });
+
+        return authorities;
     }
 }
